Experiments in editing (disabled). Initial transaction ontology
RestController, ModelAndView, model injection using ControllerAdvice